--- a/Delmon Managment System/Forms/AssetFrm.resx
+++ b/Delmon Managment System/Forms/AssetFrm.resx
@@ -118,66 +118,152 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAO5JREFUSEvlj7FtAkEQRZElinDkGuD/uQhXAQlUgRM7tENLt3OJSWgBCoFGKALL
+        CGsTy/p7y64I4Ukvm/+kGQzuAoN/GP38XzJ86l0RjVyrdv/Qw2vV7o1h8JW+XG/40l6Cwd/SYZ0Nwqv2
+        Egy+0GGtQJhrL6EZd886rBUIE+0ljEbtkw5rjVvtJQDrIRF+dFzhKW6114vRDz2BkgftZDH6vidwUTLs
+        tJPF6FsNlCR9o50sRu80UJJ0104WoH3RQEnSl9rJArQzDZQkfaqdLIA3GigZN9rJAnSPGigZN9q5wPuD
+        0Y8ayRu+40Yrt8EvjSDwL/KIP54AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAU1JREFUSEvtlb1KA1EQhSOKVhaCCBY2kiqghedMwKBEEMQXyCtoa2dhkVIlMys2
+        gq+QJxAsxGdQtEqnCBaC4k+5chOVvWt2kzVRUnjgFJd7Zr57YWByub9UPn84tjS3O/ETl8vVkXg/T0UE
+        a4S9CS388K1AG125mbWLxfnaVLzvl0g7ijQPiwvBcjyTJJd1NYReJkIEdtwtoFTaHyetLtADd/4ENJ30
+        kywAQCebL6ZeubMHaPkaCKa9oj4D3N2eV9RvgNACrygOENFVLxBRpVIfJoNZUmfcGaitZAYQdg7YJqkb
+        aXYZoZ1lBvTBAwAg9JG0h46GPcVrOwNg214gVeGQQHcyAdLGtJ1EbP0fkKrBALixFOhpLwDSToT68g3g
+        Fg6hN248ewRsCfVeYDUv0FqZ+hr5YvcrE9og7C5S+9z2gb0s/agLhepovPev6R3Y1wy2NKVQ4AAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAlVJREFUSEvFVUtrFEEQXoSAilHBx0lBRRASMI/6ahJzCShq9Kb/QUEP6kHwIizo
+        wZWpmiWYS/6D4ANF8XeICh40xigS8BTjaoxK9Tx2uneTyZ7yQR1mquqrrq+ru2u1zcTw8PQ+QG+A5AVD
+        F0C6ApJlhn4E9BmzXrKYMK8SRLPbAVWG/GDovwpbYtLb4+O6rcwxMXG/v/xdAGgeA+RNF6JVQL87I10J
+        /ZYDyMGUIz4H6L2QuxZF8WGQfG4nyl+GPGbWqfKKiBq7mPWCk8krJHNMcoUhLYYmHrnJwpD3pYQFZjnl
+        BXVBRMkZhi6GHXUUAORuaSVfRkb0qBewDpiTQUC/rVngxPF4P0h/5rJEo/FJj6ECpnkmS/cCqW6Zg+Sh
+        l10B25/24tYqAH2VO4jktMdQgShqHACSI6ExP9hTBNnBMXKQ/LHN9hh6BJNeY9JbgNzMftW3MOR3WkDn
+        g/ie4aavUGO2z8azL/9hZyBM6BWlAr9s8e6ntWNtWXthQi8YGJjZYSc+W+yHwmEbEm6SmW2gx1ABHpWz
+        hRrQl20HNAnHzI0e65THUAFAH7ULyOXC0VlAWnZ4vOwK2Hind5eTZ5lI9hbOsIA79pwMegzrwN3ApF9L
+        q697AWGBzBY3IpFddmVyJnk3OVnf6gWlBaTlrgzST4Fcz4H44tBQc3dBGk3vJNLzTPI0lyWVRufHxpqH
+        PHKDPQ655hbA0LdhR+65zB6cfBR9v7w2qUJuh/B5sxYBvZO9v6F0oS0B0uiQZSMwWQC9mr5cMpcRrpoU
+        TPoEkOtl6TYF/wEfArcoInZKeQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAH2SURBVEhLzZYxaBRREIZXRUTFQhEbBUFSqTlI/n/WNdhp
+        Kdh4CKIWEQI2tsHKQtGLO/9BKnMBG7WyE8HGUrGyUiy0kCAIEsUUEVHRRN7t7RnXPS93cpCBv5k37328
+        YWbei6IuVq3e2xDH6X6DThv8hsEfGX0eSE8WY7sa0NhoVj8QQ+dInzb6E6M+G7VcFOkTxf2lZvALhO4S
+        ekn4j+JBnRQAhyvpLrK+r0xxXNuTAUo2r0YBYPA7Rf9KxdD5gQJIXV3bADI9aNRjUpfI+rG24O/LAdB9
+        0msG3f7t9/ngIzVF+Jc/AX7F6AuEXpN6lsuob6UAwp9G0fK6UPuEXrWgF0MxkD5evEFfKSLTs/mBhN4M
+        DU1vShLtCDcpAvIYgx4a1GiLvtgRYNS7sbGpbaHpSD/Vgt0sxjVvMOrHDXph0C2DJtuiL/wLEDbX8kY8
+        NOooa8C+U9QU/FoOADRs9O/FmCaAPpOt+SKpT7mM+tkRECoiSbQZ8J1A/UQ2TpT+FUefqFTSrYQehMF3
+        ZPj69lwGve0A8CUzP5rlXTL68yi6vB5obDFqrgjoOUWEz4bDR0bSvUb/2go6E3wxVP1PgC+1mmwym/nt
+        wLm8Ogj/uBLQc6P1ov5GRQ/qI0W9aY0AfHxgT2aSaHferG0byKPfzcq/Lfqw2m/LL+uOdKaknNJkAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABIAAAASCAYAAABWzo5XAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EwAACxMBAJqcGAAAANJJREFUOE9jwAXMDfs1TU16/2Pinq/mRj3GFha90lCl+AE+g0xMuoNMjHvum5v3
-        K0CVMzCYmPQpYcNmZhP5gJqO4DIIyr4NdxmmQgg2M+51NDbuDsE0DNkgMB9iGKoiJGza62Fi3Psd07Ce
-        ryCNQItCYdjYuNcMr0EgGtOwnn8mJr3v0DFBg6D4p4lJTziQ3o8khoJxGgRyLjDQXWDY2LjHxsSkXx2b
-        WhDG7SJsGNWVKHjUICgevgYB05YuLFOjY5IMAhUt4JyODWDTgAvjNoiBAQCJaxSiSTQVFAAAAABJRU5E
-        rkJggg==
+        EwAACxMBAJqcGAAAAMpJREFUOE/tlDEKwkAQRXMCL2AjNmJhofN3k8JGsLAWxUNlJsET2XgLC29gF8RG
+        ZTEJye5mg6048Ngt/jymmYmijorn+VRBXi5cxAumJJGh3eOtkAhItyC+xnE+qhuAbOxD6+NAgc9dovJ/
+        qSdzgx80yYoo3bmypqghswU1SjYgubsyLkyjJtlXEIkOiszryvgJyM2mV1TyAPigICcnV9IpMuMC2bqC
+        iJdAPrFzvSIv7Sn/Ih+/KyKSmb3cFV+JzGlpXJp22eEQIdEbiWsUosIIsysAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="picVisa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABIAAAASCAYAAABWzo5XAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EwAACxMBAJqcGAAAANJJREFUOE9jwAXMDfs1TU16/2Pinq/mRj3GFha90lCl+AE+g0xMuoNMjHvum5v3
-        K0CVMzCYmPQpYcNmZhP5gJqO4DIIyr4NdxmmQgg2M+51NDbuDsE0DNkgMB9iGKoiJGza62Fi3Psd07Ce
-        ryCNQItCYdjYuNcMr0EgGtOwnn8mJr3v0DFBg6D4p4lJTziQ3o8khoJxGgRyLjDQXWDY2LjHxsSkXx2b
-        WhDG7SJsGNWVKHjUICgevgYB05YuLFOjY5IMAhUt4JyODWDTgAvjNoiBAQCJaxSiSTQVFAAAAABJRU5E
-        rkJggg==
+        EwAACxMBAJqcGAAAAMpJREFUOE/tlDEKwkAQRXMCL2AjNmJhofN3k8JGsLAWxUNlJsET2XgLC29gF8RG
+        ZTEJye5mg6048Ngt/jymmYmijorn+VRBXi5cxAumJJGh3eOtkAhItyC+xnE+qhuAbOxD6+NAgc9dovJ/
+        qSdzgx80yYoo3bmypqghswU1SjYgubsyLkyjJtlXEIkOiszryvgJyM2mV1TyAPigICcnV9IpMuMC2bqC
+        iJdAPrFzvSIv7Sn/Ih+/KyKSmb3cFV+JzGlpXJp22eEQIdEbiWsUosIIsysAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnDelete.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAACJtJREFUaEPt
-        WWtQlOcVts0kabTpzekPp50xTeuk0077o504iUkjBMUFKUZSsFHxgpesXFcXCiiIFa2CRAmYCEbsIuIG
-        hI25iEQJd0eEsEaWDcpF06pBQUCURq2pp+d5v0sW5iMm7GeCM56ZZ3ZWv++c59nzvuc952XMfbtv94AR
-        0SN9fX0/kr/eG9bb2/vD/v7+BVevXs1lOBg3GOSCc9euXTvMSBwYGPid/NroMSY/iUnuYlx3IX1HcKZO
-        sKg5nLXvyq6+HWMCDzOhzYz/uhK83N1DleWNVGgto+zXDtD29CLam1tK771dS22t/xokBujq6rJzNn8v
-        u/1mjX/NxzgTdldC5WUNFGN6naZPNZPH05ESnokir6nRX3xnBP91A+18/QB1dnap7165cuVme3t7hOz+
-        mzFeDr/l4BcUEvbGFjIu3SpIevuso6AYGy3JaaWwd/rJVP4/MlUQRZTeIGNBJ83bWEUvLHhNCPTzjqXc
-        3SUQoQpyOp3pcpi7a8iEq4j33qmlac+ZyduQSMGpRynqA4n4nbCCRQUadwvxprAM+vTTS6qY6urq9XK4
-        u2PYE67LaUfmW4KI/8IdFHHoM4quJNryoTbx4bDwlTry+tMqmhe4nj755ILwyzE+t9lsC+Sw+hsHwcYW
-        wWxFlULEi5FviuWz+ThRfSfRqR6i+Bpt0sNhee4ZmuEZQ8sWpVI3Fwr47+QNZDAYHpND62dyib2JII0f
-        tohfEZmAiHQ70ccsAEJSG7TJ3glLdjjIk/fNpuQ8IQQoKysr5NAPSAx0MnacowTAxsaewHLayJlovkxU
-        dZ4o9mtmYigWrT4gxJywnxJxuCRfnzJlytMyBfetp6fnB+z4MzhHiRUllDe2uYqo4aKEODdFAJGl18l3
-        xmpaFZGpZiU/P/8NpvCgxMRNY4cLFcc4J1BiUZ12O4hO9458OWlhWfIhev4ZE509c17Ea21tPcUUJklM
-        3DR2iN5JnNg47AKjbSJoI2fig39rExopVhR1i4znWUqFED5jbk2cOHGmTMU9Y4fNcIq2A0GW5pymDXVS
-        NrJOahNyBwEBybQ2fpe6vKKjo5OYhvubnp2JZhC9E4TgxN7ZJAlJqNUm4w6WhGVT8JxkVUhGRsZ2pvFT
-        ic0IDfOE4hANoOcUkyi5+R8TtXDJXcWHoCuJkKxmAeV7xMEBmptcIT6He2YowhL20yxDvCrEarXuYSoT
-        JUYjtO7u7kcVh5nbisiL2xEEy+YlVaaxP7w8YwWU7xCBLOJzuGeGIjyhUPRhStzCwsJ8pvKExGiExhl5
-        gJ3dhkNsQJBCmdQiAIRkOQWU7xEl/+FGsVJ8DvfMUITH5tFf/BNVITk5OdlM5dcSIzeMnZ2HQzSIEIIu
-        VouAXggOTqOo0FdVISkpKWlM45cSGzcM4ykcYiiCkPn/qNQkoAvKbnHfZaatqW+qQjw8PMKYxs8lNm4Y
-        C0lQnGIowjyhSUIHRO+USvzRmpMiHjePl5nCS4yxgow7Jg9SwjEmOwxFRusFTSLuYtnyTArwS+CDsF/E
-        q6qqep8pzJKY6GC4KIDjizye/nlGHAWEZGsScQfxe5wiG9a9h4UIICQkJI7D/1FioYNxVoIU53v+eUgE
-        xFCkRWgkWHnkFr04K4nmzE7irrdPxOEf74a3t3ckh/+xxEIHw5VNV1dXIwJgxl4ZniFmEgxFWsS+Fspv
-        U9TWk+Tn83fRML7FQ5vyo3HMPrvdrl8rD8OVDW47EAA3IBhPMdktyXJoE/wKiOJMmNKbyJRQSZHxZeTv
-        t5G7hyiy7DqoiuExYqCurs5XpqGP4cpGCYAZG+MphiEMRV92UGohztJEAf5J5Oe7XoiAmKjV5TR79hax
-        dLelFWB+F7F4md1saGgIlmnoY06n81VFDGZsjKcQg6EI80RocbcmcQE+J1Bil7+cKchiT2A5IRMQIcSs
-        qaDAoAzx/+vW5Kh7BpcSvMzMMg19jFOdxo5F6wJ8ZD8tJjsIAgG04kvDd1L42mJaEWelsJg94sTGYSf+
-        n0usde8RQRJ7AssJmYAIiAFemp8t/n1VxHbq7pIuJRi3HQ5HqkxDH9u/f//iS5cu9SpiAEx2uB5NjH9D
-        tOJ+02MF0Duh7XglxSoOO+WcUIA9AYHIhCIEWBBiEWKWL9pCF85fVJ9vaWnJ5QL0HZmK+zZ37txJFRUV
-        NlwUuBL7quDiod7Yp/OegBhkwlXMYqOVvJ5dKYrLmY5z6rttbW0lLEafeV62B318fKYWFBRYuBi0Yi0r
-        wbTAbUdPTU3NEaPRuMZgMEQqWcXG3pAkZSB4sWWQmGWRNpruEUMv+Kympo9aVV9nz549Vltb+6jMQzd7
-        mPEEmz+Pp+uysrJ2sLg8m822z2Kx7Nq0aVOar69vFD+D3gltx5OMn/B+ewolFsSwZ8yR24WYxS/vGyTG
-        uPJdmvF8HM2cFkvHjzlUMZyZusDAwIfY110xpBzj6S8YmCV+w/gV42eM7zMGGZdWH5RYEMPGxp7Acloa
-        XjRITKi5hAzT15C3h5mqK0+oYoqLizezG/32jDvGpTVYWZbY2POC1tO056LJaHp7kJjwv5VyqV8rMqNc
-        G3V0dLSxi8clT6PA6uvro5iYKOsd7edEmfbmsTjUfHCQGHzH8kMJx7NcND4fN26cQXYzOqy5uTkF5ACn
-        o51mcvnGcgqPfV8VgsMTBynGCuXZ8ePHz+fXR8fyUgznhEKw/riTK5ZZLCfsEYgImiOd/MeONolnUAn5
-        NRSRb/fvkUMN3TbOCUVMdaVd7AmQ93zWJD63bfliHOazrIRf028A09O4p3sI54RCFht7X95hsZyUTADc
-        6vdPnjzZyK/8QXpzFBoOO5wTCumhgIjQ0NBEfnQ243vipdFqOOxwTnB22lGdIAB7gpfTITkTEDFePHwP
-        GKrR42PHjvWZMGEC5hKlO8ByGt2Z+BKDKH3/JHff7rqNGfN/T4Y3QjOj+eYAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAO5JREFUSEvlj7FtAkEQRZElinDkGuD/uQhXAQlUgRM7tENLt3OJSWgBCoFGKALL
+        CGsTy/p7y64I4Ukvm/+kGQzuAoN/GP38XzJ86l0RjVyrdv/Qw2vV7o1h8JW+XG/40l6Cwd/SYZ0Nwqv2
+        Egy+0GGtQJhrL6EZd886rBUIE+0ljEbtkw5rjVvtJQDrIRF+dFzhKW6114vRDz2BkgftZDH6vidwUTLs
+        tJPF6FsNlCR9o50sRu80UJJ0104WoH3RQEnSl9rJArQzDZQkfaqdLIA3GigZN9rJAnSPGigZN9q5wPuD
+        0Y8ayRu+40Yrt8EvjSDwL/KIP54AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="updatebtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAlVJREFUSEvFVUtrFEEQXoSAilHBx0lBRRASMI/6ahJzCShq9Kb/QUEP6kHwIizo
+        wZWpmiWYS/6D4ANF8XeICh40xigS8BTjaoxK9Tx2uneTyZ7yQR1mquqrrq+ru2u1zcTw8PQ+QG+A5AVD
+        F0C6ApJlhn4E9BmzXrKYMK8SRLPbAVWG/GDovwpbYtLb4+O6rcwxMXG/v/xdAGgeA+RNF6JVQL87I10J
+        /ZYDyMGUIz4H6L2QuxZF8WGQfG4nyl+GPGbWqfKKiBq7mPWCk8krJHNMcoUhLYYmHrnJwpD3pYQFZjnl
+        BXVBRMkZhi6GHXUUAORuaSVfRkb0qBewDpiTQUC/rVngxPF4P0h/5rJEo/FJj6ECpnkmS/cCqW6Zg+Sh
+        l10B25/24tYqAH2VO4jktMdQgShqHACSI6ExP9hTBNnBMXKQ/LHN9hh6BJNeY9JbgNzMftW3MOR3WkDn
+        g/ie4aavUGO2z8azL/9hZyBM6BWlAr9s8e6ntWNtWXthQi8YGJjZYSc+W+yHwmEbEm6SmW2gx1ABHpWz
+        hRrQl20HNAnHzI0e65THUAFAH7ULyOXC0VlAWnZ4vOwK2Hind5eTZ5lI9hbOsIA79pwMegzrwN3ApF9L
+        q697AWGBzBY3IpFddmVyJnk3OVnf6gWlBaTlrgzST4Fcz4H44tBQc3dBGk3vJNLzTPI0lyWVRufHxpqH
+        PHKDPQ655hbA0LdhR+65zB6cfBR9v7w2qUJuh/B5sxYBvZO9v6F0oS0B0uiQZSMwWQC9mr5cMpcRrpoU
+        TPoEkOtl6TYF/wEfArcoInZKeQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAaxJREFUSEvdVTtOA0EM3RKERMf3EEsSeyZBfAIN5+AnrkFN1l6RKnyKVByAUHIA
+        rkCNkPgEISGaBJCCPJCQeDabhZInPWk0Yz9rPZ63QfDvsRhG0wZo1wAfI/CFUNYWeEfOdHxm5PMH84h8
+        ikAfBrmTRAR+R6ATgHhO56cCIF5C5ActOIwI9GSB17VOIoyJVg1yW4tkYNsW4hWtNwBpi0FuJiR3DFKr
+        mK+EAHHBIL355y7m0ZjKrNbtQXruJ30RgV7CMJqwtjppkF71eV+RI63rUCwezsil+Ql9BL5BoFtvv4+i
+        kctVp7R+IGOngzUR+M4AXet9TUTe0vqBzLYO/Emgq3J5f0ziAKI1fe4zoU3uAXmB3QL8bIAureWFTAWA
+        Glo/tUCXIp6tAJ9r/dQW/bpAUouyXHLmAoY2tb4ztVFjmqXA0DEViHHpBJeEdGYh3iiVeFwoa9nTcd+x
+        Na3bg7iie+46CbiOSHsDBK57cWKQaVYhEMP6m9lRC4CWtV4inF0D3fsiQ9mUu9E6qZBPlXFLu3j3w0Gq
+        jWxLGmQiEGnbCQE1hLIWvxk6Lf8Kn2p2TtCJJsryAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="addbtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAU1JREFUSEvtlb1KA1EQhSOKVhaCCBY2kiqghedMwKBEEMQXyCtoa2dhkVIlMys2
+        gq+QJxAsxGdQtEqnCBaC4k+5chOVvWt2kzVRUnjgFJd7Zr57YWByub9UPn84tjS3O/ETl8vVkXg/T0UE
+        a4S9CS388K1AG125mbWLxfnaVLzvl0g7ijQPiwvBcjyTJJd1NYReJkIEdtwtoFTaHyetLtADd/4ENJ30
+        kywAQCebL6ZeubMHaPkaCKa9oj4D3N2eV9RvgNACrygOENFVLxBRpVIfJoNZUmfcGaitZAYQdg7YJqkb
+        aXYZoZ1lBvTBAwAg9JG0h46GPcVrOwNg214gVeGQQHcyAdLGtJ1EbP0fkKrBALixFOhpLwDSToT68g3g
+        Fg6hN248ewRsCfVeYDUv0FqZ+hr5YvcrE9og7C5S+9z2gb0s/agLhepovPev6R3Y1wy2NKVQ4AAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="btnnew.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAZdJREFUSEu9VkFOAkEQRK/qVbmYqEcOHJxqiHzAt4jxDQbRRKFbPfgEfYPKHzwo
+        fkDRg57xogdMA8HdngF20FhJJWRSXcX2zPRuLheF3tyAfwSiRh7gXYK04PgFTr4I/Nn/Db4FpFoun6/Y
+        uqmoVE6WyMkRgT8I0pvCLsD1QuFi0foEAZxuwPFjwGgynbRLpea69UtBzQn87hVnJCBvY0O0LTP9c0sn
+        7WC7Bj0PFCQI8JXSrlsCcpA2p0Y+y4YCcqi06wF2U6eLHO8FRB4jAlRb/QmAtKwgxMiAm2TAqxWEGBNA
+        Tp6H9vvzejutAE4uAT5OkjZ5W2nXVWvr1VO9/yMgl4OTji/wGdUi8NNoD3Rw+QKfMQFwfJ0M0InpiSxj
+        AsjxzihAL4VeDk80e0B3q9hcHgUMn6IeEJqAbKOCHNdS5godUDqoPHEkAbkvFpsL1r8PHbU6cm1RVmpt
+        uXy2Zn1TAHiVwHe2eDr5Yey7wEIfUUdulo3vaxzXxrZlEvR06VTUMz24jHrj9aUvHV3To+idlt8h/rPl
+        G+2j+wU8nBabAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnnewmodel.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAZdJREFUSEu9VkFOAkEQRK/qVbmYqEcOHJxqiHzAt4jxDQbRRKFbPfgEfYPKHzwo
+        fkDRg57xogdMA8HdngF20FhJJWRSXcX2zPRuLheF3tyAfwSiRh7gXYK04PgFTr4I/Nn/Db4FpFoun6/Y
+        uqmoVE6WyMkRgT8I0pvCLsD1QuFi0foEAZxuwPFjwGgynbRLpea69UtBzQn87hVnJCBvY0O0LTP9c0sn
+        7WC7Bj0PFCQI8JXSrlsCcpA2p0Y+y4YCcqi06wF2U6eLHO8FRB4jAlRb/QmAtKwgxMiAm2TAqxWEGBNA
+        Tp6H9vvzejutAE4uAT5OkjZ5W2nXVWvr1VO9/yMgl4OTji/wGdUi8NNoD3Rw+QKfMQFwfJ0M0InpiSxj
+        AsjxzihAL4VeDk80e0B3q9hcHgUMn6IeEJqAbKOCHNdS5godUDqoPHEkAbkvFpsL1r8PHbU6cm1RVmpt
+        uXy2Zn1TAHiVwHe2eDr5Yey7wEIfUUdulo3vaxzXxrZlEvR06VTUMz24jHrj9aUvHV3To+idlt8h/rPl
+        G+2j+wU8nBabAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
