--- a/Delmon Managment System/Forms/ReportFrm.resx
+++ b/Delmon Managment System/Forms/ReportFrm.resx
@@ -121,13 +121,13 @@
   <data name="picvisascreen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABIAAAASCAYAAABWzo5XAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EwAACxMBAJqcGAAAAWVJREFUOE+llM9Kw0AQxiPeBA/eBD168OIhmZ0YStWbPkFBxKsi3hQPRR/A2uxG
-        wUOpgtdCRcE+SPEq3vRB9Jt2qoH8odEPPnY2M/lldpONl6da7WqeyfaYXLfIxtiOlheLub0IUFOnuUL+
-        WsOsiOzqemAppGSbjb2VOG104Xve14zUloKQHKD4sNBkn6VbrS0FFSch5Jt/AhF15zQcqTLIGLeFZbzi
-        7Xxgr94x39f89KAwbC1jbMMPMsfeWPg8DJINzKcHjTfWHcN9dPSEeYsoPpFcZRDGUzbu8V+gKHJLgCSI
-        f5aG8QLfWB1jtc1mjjfRzdCQ+4TfEO9pvhqovna5IJbuJnGj0Z+tBDImZnTwInvza3fP7A4qgcLARbhx
-        Vy+NJGeQKTkSEMBnsLyQgaazEpDvuxV8jHfpjtDhDQd2R0ByoOUAC1xvy0pAGuZKQJOllQpP7+DpuT+y
-        sW1PfnpanpLnfQMYsN//OSV/kAAAAABJRU5ErkJggg==
+        EwAACxMBAJqcGAAAAVVJREFUOE+llLFKA0EQhk/sBAs7QUsLG4vc/88ZQtROnyAgYquInWIR9AGMycwp
+        WEgUbAMRBfMgYit2+iDKmDNeTnN4+sPP7e7sfszuMRMEP6hSOZkUaEdg7VEm9SJ77ptEmtMCrWfX0xLo
+        aXZtIEDnF0NFhHhVqOc+TpvUUhC8jfneXJBAe6RujzT0zrNN9uaCRgf78fqfQEB7Ij0vDCJthdBHgb0I
+        9Zm0zST+e1AUNWYF2hTotc9JVVIPozBeKgTqP6ztktYV2C2pDaC157HCIIHuC+3mX6By2WaEFqevJtAj
+        QKuFQB9faS0L7IGwV8KeBLaRxIuBqgvHU27P7nNcq3XHC4HIlgjs3t/my3YlYluFQFFoZdLW0+teg4J4
+        x0GkHiQ/pJfeMyQHlUo2R+hlOiOBnUmoaw7ygvYCdnj2/EC56WYeO1ferLINbNja8aaXPed6Bxiw3/9k
+        Wz39AAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="delmon.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
